# analisisDemografico

./: .gitignore  README.md  pyproject.toml
gui/: vecinos_gui.py  vecinos_manual_gui.py
notebook/: 00_municipios_vecinos.ipynb  00_municipios_vecinos_manual.ipynb  02_comparativa_demografica.ipynb  preparacion_datos.ipynb
