[project]
name = "analisisdemografico"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "contextily>=1.7.0",
    "geopandas>=1.1.3",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "libpysal>=4.13.0",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyogrio>=0.12.1",
    "shapely>=2.1.2",
]
